--- a/css/screen.css
+++ b/css/screen.css
@@ -31,10 +31,58 @@
 \*------------------------------------*/
 
 :root {
+	--background-color-primary: #5e5e5e;
+	--background-color-secondary: #3b3b3b;
+	--font-color: #000000;
+}
+
+/*------------------------------------*\
+# Weather States
+\*------------------------------------*/
+
+
+.is-clear {
+	--background-color-primary: #3CD0FD;
+	--background-color-secondary: #7FF7FF;
+	--font-color: #000000;
+}
+
+.is-sunny {
+	--background-color-primary: #FFEF8B;
+	--background-color-secondary: #E3A175;
+	--font-color: #000000;
+}
+
+.is-cloudy {
+	--background-color-primary: #5e5e5e;
+	--background-color-secondary: #3b3b3b;
+	--font-color: #000000;
+}
+
+.is-rainy {
+	--background-color-primary: #66f4fd;
+	--background-color-secondary: #64d5f7;
+	--font-color: #000000;
+}
+
+.is-snowy {
 	--background-color-primary: #64D5F7;
 	--background-color-secondary: #66F4FD;
 	--font-color: #000000;
 }
+
+.is-foggy {
+	--background-color-primary: #5e5e5e;
+	--background-color-secondary: #3b3b3b;
+	--font-color: #000000;
+}
+
+.is-night {
+	--background-color-primary: #64D5F7;
+	--background-color-secondary: #66F4FD;
+	--font-color: #000000;
+}
+
 
 /*------------------------------------*\
   #GENERIC
@@ -51,12 +99,16 @@ html {
 	line-height: 32px;
 	font-family: 'Dosis', Helvetica, arial, sans-serif;
 	font-weight: 600;
-	background: linear-gradient(180deg, var(--background-color-primary), var(--background-color-secondary));
-    color: var(--font-color);
 	background-attachment: fixed;
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+body {
+	background: linear-gradient(180deg, var(--background-color-primary), var(--background-color-secondary));
+    color: var(--font-color);
+	transition: background 5s linear;
 }
 
 *,
@@ -262,10 +314,20 @@ a:focus {
 
 .o-container--primary {
 	height: 5vh;
+	transition: opacity 1s ease-in-out;
 }
 
 .o-container--secondary {
+	height: 95vh;
+	transition: opacity 2s ease-in-out;
+}
+
+.o-container--tertiary {
 	height: 85vh;
+}
+
+.o-container--hidden {
+	opacity: 0;
 }
 
 /*
@@ -310,6 +372,10 @@ a:focus {
 	display: -ms-flexbox;
 	display: flex;
 	flex-wrap: wrap;
+}
+
+.o-layout---no-wrap {
+	flex-wrap: nowrap;
 }
 
 .o-layout__item {
@@ -442,6 +508,68 @@ a:focus {
 \*------------------------------------*/
 
 /*
+	Components: Toggle button
+	---
+	Creates a toggle button
+*/
+.theme-switch-wrapper {
+	display: flex;
+	align-items: center;
+  }
+  .theme-switch-wrapper > em {
+	margin-left: 10px;
+	font-size: 1rem;
+  }
+  .theme-switch {
+	display: inline-block;
+    height: 25px;
+    position: relative;
+    width: 50px;
+  }
+  
+  .theme-switch input {
+	display:none;
+  }
+  
+  .slider {
+	background-color: #ccc;
+	bottom: 0;
+	cursor: pointer;
+	left: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	transition: .4s;
+  }
+  
+  .slider:before {
+	background-color: #fff;
+    bottom: 3px;
+    content: "";
+    height: 20px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 20px;
+  }
+  
+  input:checked + .slider {
+	background-color: #66bb6a;
+  }
+  
+  input:checked + .slider:before {
+	transform: translateX(23px);
+  }
+  
+  .slider.round {
+	border-radius: 34px;
+  }
+  
+  .slider.round:before {
+	border-radius: 50%;
+  }
+
+/*
     Component: Intro
     ---
     Intro part on the homepage
@@ -493,9 +621,8 @@ a:focus {
 }
 
 .c-detail-icon {
-	height: 32px;
-	display: flex;
-	height: 100%;
+	height: auto;
+    width: 40%;
 }
 
 /*
@@ -752,7 +879,6 @@ a:focus {
 .c-lead--md {
 	font-size: 20px;
 	line-height: 32px;
-	opacity: 50%;
 }
 
 .c-lead--lg {
@@ -922,6 +1048,10 @@ a:focus {
 
 .u-mb-md {
 	margin-bottom: 16px !important;
+}
+
+.u-mlr-md {
+	margin: 0 20px 0 20px;
 }
 
 .u-mb-lg {
